--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ p {
     font-family: Arial, Helvetica, sans-serif;
     font-size: x-small;
 }
+h2 {font-family: Sporting Grotesque;}
+li {font-family: Sporting Grotesque;}
 h1 {
     color:rgb(10, 23, 84)
 }
