--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 p {
     color:rgb(10, 23, 84)
     font-family: Arial, Helvetica, sans-serif;
-    font-size: x-small;
+    font-size: 18px;
 }
 h2 {font-family: Sporting Grotesque;}
 li {font-family: Sporting Grotesque;}
